# timg

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  shell.nix  timg.cc
.github/conf/: AppImageBuilder.yml.in
.github/workflow/: macos.yml
.github/workflows/: macos-brew-release.yml  macos-brew.yml  macos.yml  ubuntu.yml
cmake/: GetGitRevisionDescription.cmake  README
cmake/modules/: FindGraphicsMagick++.cmake
img/: README.images.txt
man/: CMakeLists.txt  Makefile  timg.1  timg.1.md
src/: CMakeLists.txt  Makefile  buffered-write-sequencer.cc  buffered-write-sequencer.h  create-manpage-inc.sh  display-options.h  framebuffer.cc  framebuffer.h  graphics-magick-source.cc  graphics-magick-source.h  html-colors.inc  image-display.cc  image-display.h  image-scaler.cc  image-scaler.h  image-source.cc  image-source.h  iterm2-canvas.cc  iterm2-canvas.h  jpeg-source.cc  jpeg-source.h  kitty-canvas.cc  kitty-canvas.h  openslide-source.cc  openslide-source.h  pdf-image-source.cc  pdf-image-source.h  qoi-image-source.cc  qoi-image-source.h  renderer.cc  renderer.h  sixel-canvas.cc  sixel-canvas.h  stb-image-source.cc  stb-image-source.h  svg-image-source.cc  svg-image-source.h  term-query.cc  term-query.h  terminal-canvas.cc  (+24 more)
